WIP upgrade: added rpc to list all resources and getr details of a resource
