# models/model_resource_info.go
@@ -1,0 +1,28 @@
+/*
+ * API for kogger
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: 1.0.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package models
+
+type ResourceInfo struct {
+
+	// Namespace of the resource
+	Namespace string `json:"namespace"`
+
+	// Type of the resource
+	ResourceType string `json:"resourceType"`
+
+	// Name of the resource
+	Name string `json:"name"`
+
+	// Status of the resource
+	Status string `json:"status"`
+
+	// Additional information about the resource
+	Information *interface{} `json:"information,omitempty"`
+}
